kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate                                   
    rollingUpdate: 
      maxUnavailable: 1                                   
      maxSurge: 1      
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        # readinessProbe:
        #     httpGet:
        #       path: /init/index.html
        #       port: 8080
        #     initialDelaySeconds: 5
        #     periodSeconds: 3
        volumeMounts:
        - name: workdir
          mountPath: /homework
      nodeSelector:
        homework: "true"
      dnsPolicy: Default
      volumes:
      - name: workdir
        emptyDir: {}
