kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: homework
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
